--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:hint="@string/login_Username"
         android:inputType="textPersonName"
         android:maxLength="@integer/MAXUSERNAMELENGTH"
-        android:text=""/>
+        android:text="SoftHat"/>
 
     <EditText
         android:id="@+id/login_PasswordEditText"
@@ -34,7 +34,7 @@
         android:hint="@string/login_Password"
         android:inputType="textPassword"
         android:maxLength="@integer/MAXPASSWORDLENGTH"
-        android:text=""/>
+        android:text="drips"/>
 
     <Button
         android:id="@+id/login_LoginButton"
