--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -2,15 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="project.senior.hardhats.CustomerFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <Button
         android:id="@+id/add_customer_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="@string/add_customer" />
 
+    <Button
+        android:id="@+id/fragmentcustomer_ViewCustomersButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/fragmentcustomer_viewcustomers" />
 </LinearLayout>
