--- a/app/src/main/res/layout/fragment_add_line.xml
+++ b/app/src/main/res/layout/fragment_add_line.xml
@@ -27,7 +27,11 @@
             android:ems="10"
             android:hint="@string/fragmentaddline_quantity"
             android:inputType="textPersonName" />
-
+        DescriptionEditText
+        QuantityEditText
+        UnitsSpinner
+        UnitsEditText
+        PriceEditText
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
