--- a/app/src/main/res/layout-land/activity_generate_invoice.xml
+++ b/app/src/main/res/layout-land/activity_generate_invoice.xml
@@ -6,8 +6,11 @@
     android:gravity="center_horizontal|center"
     android:orientation="vertical"
     tools:context="project.senior.hardhats.GenerateInvoiceActivity">
-
-
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
     <Spinner
         android:id="@+id/generateinvoice_chooseCustomerSpinner"
         android:layout_width="match_parent"
@@ -21,123 +24,100 @@
         android:layout_weight="1"
         android:text="@string/generateinvoice_choosecustomer" />
 
-    <ScrollView
+
+    <TextView
+        android:id="@+id/generateinvoice_firstNameLabel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".25">
+        android:layout_weight="1.05"
+        android:text="@string/first_name" />
 
-        <LinearLayout
+    <TextView
+        android:id="@+id/generateinvoice_firstNameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05" />
+
+    <TextView
+        android:id="@+id/generateinvoice_lastLabel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05"
+        android:text="@string/last_name" />
+
+    <TextView
+        android:id="@+id/generateinvoice_lastNameTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05"
+
+        />
+
+    <TextView
+        android:id="@+id/generateinvoice_phoneLabel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05"
+        android:text="@string/phone_number" />
+
+    <TextView
+        android:id="@+id/generateinvoice_phoneNumberTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05" />
+
+    <TextView
+        android:id="@+id/generateinvoice_emailLabel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05"
+        android:text="@string/email" />
+
+    <TextView
+        android:id="@+id/generateinvoice_emailTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05" />
+
+    <TextView
+        android:id="@+id/generateinvoice_addressLabel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1.05"
+        android:text="@string/generateinvoice_address" />
+
+    <TextView
+        android:id="@+id/generateinvoice_addressTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:ems="10"
+        android:inputType="none"
+        android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/generateinvoice_useGeneralContractorEmailCheckBox"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:text="@string/generateinvoice_usegeneralcontractor" />
 
-            <TextView
-                android:id="@+id/generateinvoice_firstNameLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/first_name" />
+        <EditText
+            android:id="@+id/generateinvoice_gcEmailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ems="13"
+            android:inputType="textEmailAddress" />
 
-            <EditText
-                android:id="@+id/generateinvoice_firstNameEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:inputType="none"
-                android:text="" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/generateinvoice_lastLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/last_name" />
 
-            <EditText
-                android:id="@+id/generateinvoice_lastNameEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="none"
-                android:text="" />
 
-            <TextView
-                android:id="@+id/generateinvoice_phoneLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/phone_number" />
-
-            <EditText
-                android:id="@+id/generateinvoice_phoneNumberEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="none"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/generateinvoice_emailLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/email" />
-
-            <EditText
-                android:id="@+id/generateinvoice_emailEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="none"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/generateinvoice_addressLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/generateinvoice_address" />
-
-            <EditText
-                android:id="@+id/generateinvoice_addressEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="none"
-                android:text="" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/generateinvoice_useGeneralContractorEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/generateinvoice_usegeneralcontractor" />
-
-                <EditText
-                    android:id="@+id/generateinvoice_gcEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
 
 </LinearLayout>
 
