--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -13,9 +13,17 @@
         android:layout_height="wrap_content"
         android:text="@string/add_customer" />
 
+    <ListView
+        android:id="@+id/fragmentCustomer_ListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
+<!--
     <Button
         android:id="@+id/fragmentcustomer_ViewCustomersButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/fragmentcustomer_viewcustomers" />
+        -->
 </LinearLayout>
