--- a/app/src/main/res/layout/fragment_invoice_preview.xml
+++ b/app/src/main/res/layout/fragment_invoice_preview.xml
@@ -4,12 +4,27 @@
     android:layout_height="match_parent"
     tools:context="project.senior.hardhats.InvoicePreviewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
-
-    <ListView
-        android:id="@+id/fragmentInvoicePreview_previewListView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <ListView
+            android:id="@+id/fragmentInvoicePreview_previewListView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="100" />
+
+        <TextView
+            android:id="@+id/fragmentInvoicePreview_totalTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:text="qqqq" />
+
+    </LinearLayout>
 
 </FrameLayout>
